force-app/main/default/objects/Actual_Achievement__c/Actual_Achievement__c.object-meta.xml
<CustomObject>
    <label>Actual Achievement</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Actual Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Achievement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>