force-app/main/default/objects/Actual_Achievement__c/fields/B_Promoter_Number__c.field-meta.xml
<CustomField>
    <fullName>B_Promoter_Number__c</fullName>
    <label>B Promoter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>