force-app/main/default/objects/Actual_Achievement__c/fields/C_Promoter_number__c.field-meta.xml
<CustomField>
    <fullName>C_Promoter_number__c</fullName>
    <label>C Promoter number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>