force-app/main/default/objects/Actual_Achievement__c/fields/S_Promoter_Number__c.field-meta.xml
<CustomField>
    <fullName>S_Promoter_Number__c</fullName>
    <label>S Promoter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>