force-app/main/default/objects/Actual_Achievement__c/listViews/Asean.listView-meta.xml
<ListView>
    <fullName>Asean</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Store_Number__c</columns>
    <columns>S_Promoter_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Asean</label>
</ListView>