force-app/main/default/objects/Actual_Achievement__c/listViews/Type_Customer.listView-meta.xml
<ListView>
    <fullName>Type_Customer</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>SAP_Customer_Code__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Store_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Actual_Achievement__c.Customer</value>
    </filters>
    <label>Customer</label>
</ListView>